02-deploying-sample/01-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoamiv1
  namespace: app
  labels:
    name: whoamiv1
spec:
  replicas: 1
  selector:
    matchLabels:
      task: whoamiv1
  template:
    metadata:
      labels:
        task: whoamiv1
    spec:
      containers:
        - name: whoamiv1
          image: traefik/whoami:latest
          args:
            - -name=FOO
            - -verbose
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /ping
              port: 80
            failureThreshold: 1
            initialDelaySeconds: 2
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoamiv2
  namespace: app
  labels:
    name: whoamiv2
spec:
  replicas: 1
  selector:
    matchLabels:
      task: whoamiv2
  template:
    metadata:
      labels:
        task: whoamiv2
    spec:
      containers:
        - name: whoamiv2
          image: traefik/whoami:latest
          args:
            - -name=BAR
            - -verbose
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /ping
              port: 80
            failureThreshold: 1
            initialDelaySeconds: 2
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi


---

apiVersion: v1
kind: Service
metadata:
  name: whoamiv1
  namespace: app
spec:
  ports:
    - name: http
      port: 80
  selector:
    task: whoamiv1

---

apiVersion: v1
kind: Service
metadata:
  name: whoamiv2
  namespace: app
spec:
  ports:
    - name: http
      port: 80
  selector:
    task: whoamiv2
